# ppos_meca

./: README.md  file.asm  ~{.bash
pract_3_spi/: accel_rw.vhd  accel_rw.vhd.bak  init_accel.vhd  init_accel.vhd.bak  p3_accel_motor.vhd  p3_accel_motor.vhd.bak  pract_3_spi.qpf  pract_3_spi.qsf  pract_3_spi.qws  pract_3_spi.vhd  pract_3_spi.vhd.bak  pract_3_spi_assignment_defaults.qdf  pract_3_spi_nativelink_simulation.rpt  spi_3_wire_master.vhd.bak
pract_3_spi/.qsys_edit/: preferences.xml
pract_3_spi/db/: .cmp.kpt  pract_3_spi.(0).cnf.cdb  pract_3_spi.(0).cnf.hdb  pract_3_spi.(1).cnf.cdb  pract_3_spi.(1).cnf.hdb  pract_3_spi.(2).cnf.cdb  pract_3_spi.(2).cnf.hdb  pract_3_spi.(3).cnf.cdb  pract_3_spi.(3).cnf.hdb  pract_3_spi.(4).cnf.cdb  pract_3_spi.(4).cnf.hdb  pract_3_spi.(5).cnf.cdb  pract_3_spi.(5).cnf.hdb  pract_3_spi.ae.hdb  pract_3_spi.asm.qmsg  pract_3_spi.asm.rdb  pract_3_spi.asm_labs.ddb  pract_3_spi.cbx.xml  pract_3_spi.cmp.bpm  pract_3_spi.cmp.cdb  pract_3_spi.cmp.hdb  pract_3_spi.cmp.idb  pract_3_spi.cmp.logdb  pract_3_spi.cmp.rdb  pract_3_spi.cmp_merge.kpt  pract_3_spi.db_info  pract_3_spi.eda.qmsg  pract_3_spi.fit.qmsg  pract_3_spi.hier_info  pract_3_spi.hif  pract_3_spi.lpc.html  pract_3_spi.lpc.rdb  pract_3_spi.lpc.txt  pract_3_spi.map.bpm  pract_3_spi.map.cdb  pract_3_spi.map.hdb  pract_3_spi.map.kpt  pract_3_spi.map.qmsg  pract_3_spi.map.rdb  pract_3_spi.map_bb.cdb  (+19 more)
pract_3_spi/output_files/: pract_3_spi.asm.rpt  pract_3_spi.cdf  pract_3_spi.done  pract_3_spi.eda.rpt  pract_3_spi.fit.rpt  pract_3_spi.fit.summary  pract_3_spi.flow.rpt  pract_3_spi.jdi  pract_3_spi.map.rpt  pract_3_spi.pin  (+4 more)
pract_5/ejemplo/: CMakeLists.txt  package.xml
pract_5/ejemplo/src/: ejemplo_pub.cpp  ejemplo_sub.cpp
practica1/: busqueda_arduino_example.txt  example_file.txt  fotoresistencia.ino  serial_to_7seg.ino
(+54 files in other folders)
